USAGOV-1469-Homepage-changes-grid-alignment: Fix prev and next button

--- a/web/themes/custom/usagov/sass/_carousel.scss
+++ b/web/themes/custom/usagov/sass/_carousel.scss
@@ -76,6 +76,7 @@
     align-self: center;
     justify-self: start;
     left: 0;
+    margin-left: 4px;
   }
 
   .slick-list {
@@ -115,6 +116,7 @@
     align-self: center;
     justify-self: end;
     right: 0;
+    margin-right: 4px;
   }
 
   .slick-dots {
